# o_func_install

./: ._setup.py  README.md  pyproject.toml  setup.py
functions.egg-info/: PKG-INFO  SOURCES.txt
o_func/: ._cmcc_ebm_daily.F90  ._gen.py  ._net.py  ._shape.py  __init__.py  cmcc_ebm_daily.F90  maps.py  near_neigh.py  para_proc.py  run_cmcc_ebm.sh
o_func.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
o_func/INVEST/: ._calibration.csv  20_year_run.py  EBM_river_maker.py  PET0.ESMF_LogFile  analysing_grid_data_for_EBM.py  bc_plotter.R  cal_attempt_3.csv  calibrated_flushing_times.csv  calibration.csv  ck_spring_neap_equations.txt  ck_spring_neap_polynomial_equations.txt  code_injection.txt  daily_average_river_data.csv  estuary_EBM.py  estuary_EBM_optimised.py  flushing_time_comparison.csv  simplified_ck_spring_neap_equations.txt  split_nc_daily.py  tide_plotter_for_river.py  updated_estuary_table_with_ebm.csv
o_func/data_metrics/: ._comparative_stats_processing.py  WaterLevel.bc  comparative_stats_processing.py  gauge_bottom.txt  gauge_north.txt  gauge_south.txt  gauge_top.txt  stats_processing.py  stats_processing_r_squared_etc.py  t_tide.py  tide_gauges.pli
o_func/data_prepkit/: ._gen_directory.py  ._ukc3_river_to_primea.py  ._view_estuary_box.py  ._wind_prep.py  ._write_boundary_conditions_from_ukc4.py  MK2_MP_TEST_UKC3_interpolated_onto_PRIMEA_grid_nc_file_generator.py  __init__.py  bathy_compare.py  dataset_details.txt  esmf.py  gen_directory.py  gen_input.py  gen_interp_grid_dataset.py  write_bc.py  (+9 more)
o_functions.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+55 files in other folders)
